--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/student-dashboard-view-notifications.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/student-dashboard-view-notifications.fxml
@@ -54,9 +54,9 @@
                   <!-- Notifications Table -->
                   <TableView fx:id="notificationsTable" style="-fx-background-color: #f4f4f9;" VBox.vgrow="ALWAYS">
                       <columns>
-                          <TableColumn fx:id="timestampColumn" prefWidth="145" text="Timestamp" />
-                          <TableColumn fx:id="courseIdColumn" prefWidth="93" text="Course ID" />
-                          <TableColumn fx:id="messageColumn" prefWidth="483" text="Message" />
+                          <TableColumn fx:id="timestampColumn" prefWidth="140" minWidth="100" maxWidth="200" text="Timestamp" />
+                          <TableColumn fx:id="courseIdColumn" prefWidth="120" minWidth="80" maxWidth="180" text="Course ID" />
+                          <TableColumn fx:id="messageColumn" prefWidth="500" minWidth="300" text="Message" />
                       </columns>
                       <columnResizePolicy>
                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
