--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/student-dashboard.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/student-dashboard.fxml
@@ -52,9 +52,9 @@
                         </Label>
 
                         <!-- Student Info Section -->
-                        <VBox alignment="CENTER_LEFT" prefHeight="130.0" prefWidth="280.0" spacing="15.0" style="-fx-background-color: rgba(255,255,255,0.1); -fx-background-radius: 15; -fx-padding: 20;">
+                        <VBox alignment="CENTER_LEFT" prefHeight="84.0" prefWidth="255.0" spacing="15.0" style="-fx-background-color: rgba(255,255,255,0.1); -fx-background-radius: 15; -fx-padding: 20;">
                            <children>
-                              <Label fx:id="enrolledCoursesLabel" styleClass="teacher-text-label" stylesheets="@styles.css" text="Enrolled Courses: [Count]" textAlignment="CENTER" wrapText="true">
+                              <Label fx:id="enrolledCoursesLabel" styleClass="teacher-text-label" stylesheets="@styles.css" text="Enrolled Courses: [Count]" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
