--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/welcome-page.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/welcome-page.fxml
@@ -27,6 +27,7 @@
                   </VBox>
                </children>
             </AnchorPane>
+            <AnchorPane prefHeight="27.0" prefWidth="800.0" />
 
             <!-- Admin Radio Button -->
             <RadioButton fx:id="welcomePageAdminRadioButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="160.0" style="-fx-text-fill: #1F2A44; -fx-padding: 10 20 10 20; -fx-background-color: #FFFFFF; -fx-background-radius: 8; -fx-border-color: #D1D5DB; -fx-border-radius: 8;" styleClass="welcome-radio-button" text="Admin" toggleGroup="$roleGroup">
